--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<head>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-
+<!--
 		<script src="./cagess.js"></script>
+		-->
+		<script src="https://dovicor.github.io/cagess.js"></script>
 
 		<style>
 /* Defining the CSS styles in the HTML for simplicity - to avoid another file, although this is still a bit
